# argus-mapping

./: Cargo.toml  README.md
iidm/: Cargo.toml
iidm-derive/: Cargo.toml
iidm-derive/src/: identifiable.rs  lib.rs  updatable.rs
iidm/src/: lib.rs
iidm/src/entities/: line.rs  mod.rs  network.rs
iidm/src/extensions/: mod.rs
iidm/src/iidm_ecs/: ecs_switch.rs  mod.rs
iidm/src/iidm_json/: line.rs  mod.rs
iidm/src/libs/: json.rs
iidm/src/plugins/: mod.rs
iidm/src/resources/: mod.rs
iidm/tests/: ecs_nodes.rs  main.rs  metadata_grid.rs
iidm/tests/iidm/: line.rs  mod.rs  network.rs
iidm/tests/it/: line.rs  mod.rs  network.rs
iidm/tests/it/iidm/: mod.rs
iidm/tests/it/iidm/current_limit/: update.rs
iidm/tests/it/iidm/line/: mod.rs  serialization.rs  update.rs
iidm/tests/it/iidm/network/: update.rs
iidm/tests/it/iidm/temporary_limit/: update.rs
iidm/tests/it/iidm/temporary_line/: update.rs
iidm/tests/it/updatable/: mod.rs  temporary_line.rs
server/: Cargo.toml
server/src/: main.rs
server/src/components/: lines.rs
server/src/handlers/: index.rs  mod.rs  stream_iidm.rs  update_iidm.rs  upload_iidm.rs
server/src/states/: ecs.rs  mod.rs
server/src/states/ecs/: update_registry.rs
server/templates/: iidm_table.html  index.html
src/: lib.rs
src/iidm_ecs/: ecs_switch.rs  mod.rs
src/iidm_json/: line.rs  mod.rs
src/metadata_grid/: components.rs  ecs_bus_nodes.rs  ecs_edges.rs  ecs_nodes.rs  mod.rs
tests/: ecs_bus_nodes.rs  ecs_nodes.rs  main.rs  metadata_grid.rs
tests/iidm/: network.rs
