[workspace]
members = ["iidm", "iidm-derive"]
resolver = "2"

[profile.dev]
debug = 1

[profile.dev.package]
# These speed up local tests.
serde.opt-level = 3

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

[profile.dev-rel]
inherits = "release"
debug = 2
