[package]
name = "iidm"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy_ecs = { workspace = true }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { workspace = true }
serde_json = "1.0.138"
iidm-derive = { path = "../iidm-derive" }
thiserror = { workspace = true }
schemars = { version = "0.8.21", features = ["chrono"] }
jsonschema = "0.29.0"
